<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addData.AddDataFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="45dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.cardview.widget.CardView
            android:id="@+id/weightCard"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            app:cardCornerRadius="5dp">

        <TextView
            android:id="@+id/WeightText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-black"
            android:text="@string/AddData_Weight"
            android:textAlignment="center"
            android:gravity="center"
            android:textFontWeight="500"
            android:textSize="30dp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/heightCard"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            app:cardCornerRadius="5dp">

            <TextView
                android:id="@+id/HeightText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-black"
                android:text="@string/AddData_Height"
                android:textAlignment="center"
                android:gravity="center"
                android:textFontWeight="500"
                android:textSize="30dp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/activityLevelCard"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            app:cardCornerRadius="5dp">

            <TextView
                android:id="@+id/ActivityLevel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-black"
                android:text="@string/AddData_Activity_Level"
                android:textAlignment="center"
                android:gravity="center"
                android:textFontWeight="500"
                android:textSize="30dp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/bfpCard"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            app:cardCornerRadius="5dp"
            >

            <TextView
                android:id="@+id/BodyFatPercentage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-black"
                android:text="@string/AddData_BodyFatPercentage"
                android:textAlignment="center"
                android:gravity="center"
                android:textFontWeight="500"
                android:textSize="30dp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/waistCard"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            app:cardCornerRadius="5dp">

            <TextView
                android:id="@+id/WaistSize"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-black"
                android:text="@string/AddData_WaistSize"
                android:textAlignment="center"
                android:gravity="center"
                android:textFontWeight="500"
                android:textSize="30dp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/chestCard"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            app:cardCornerRadius="5dp">

            <TextView
                android:id="@+id/ChestSize"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-black"
                android:text="@string/AddData_ChestSize"
                android:textAlignment="center"
                android:gravity="center"
                android:textFontWeight="500"
                android:textSize="30dp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/birthdayCard"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            app:cardCornerRadius="5dp">

            <TextView
                android:id="@+id/Birthday"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-black"
                android:text="@string/AddData_Birthday"
                android:textAlignment="center"
                android:gravity="center"
                android:textFontWeight="500"
                android:textSize="30dp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>