<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.macros.MacrosFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">
        <androidx.cardview.widget.CardView
            android:id="@+id/proteinCard"
            android:layout_width="fill_parent"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            app:cardCornerRadius="5dp"
            app:cardBackgroundColor="@color/Gainsboro"
            app:cardElevation="20dp">

            <TextView
                android:id="@+id/proteinText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/MacroDefaultVal"
                android:textAlignment="center"
                android:textFontWeight="600"
                android:textSize="36dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/proteinLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="-4dp"
                android:fontFamily="sans-serif-black"
                android:gravity="bottom"
                android:text="@string/Macro_Protein"
                android:textAlignment="center"
                android:includeFontPadding="false"
                android:textColor="@color/White"
                android:textFontWeight="400"
                android:textSize="32dp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/fatCard"
            android:layout_width="fill_parent"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            app:cardCornerRadius="5dp"
            app:cardBackgroundColor="@color/Gainsboro"
            app:cardElevation="20dp">

            <TextView
                android:id="@+id/fatText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/MacroDefaultVal"
                android:textAlignment="center"
                android:textFontWeight="600"
                android:textSize="36dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fatLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="-4dp"
                android:fontFamily="sans-serif-black"
                android:gravity="bottom"
                android:text="@string/Macro_Fat"
                android:textAlignment="center"
                android:includeFontPadding="false"
                android:textColor="@color/White"
                android:textFontWeight="400"
                android:textSize="32dp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/carbCard"
            android:layout_width="fill_parent"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            app:cardCornerRadius="5dp"
            app:cardBackgroundColor="@color/Gainsboro"
            app:cardElevation="20dp">

            <TextView
                android:id="@+id/carbText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/MacroDefaultVal"
                android:textAlignment="center"
                android:textFontWeight="600"
                android:textSize="36dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/carbLabel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="-4dp"
                android:fontFamily="sans-serif-black"
                android:gravity="bottom"
                android:text="@string/Macro_Carbohydrates"
                android:textAlignment="center"
                android:includeFontPadding="false"
                android:textColor="@color/White"
                android:textFontWeight="400"
                android:textSize="29dp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/refreshButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:backgroundTint="@color/ChineseViolet"
            android:text="@string/Macro_RefreshButton"
            android:textColor="@color/White" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>